@@ -1,3 +1,8 @@
+2007-04-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices/eqndefined.cpp: Allowing I1, I2, etc. in charge
+	equations for now.
+
 2007-04-23  Stefan Jahn  <stefan@lkcc.org>
 
 	* devices/eqndefined.cpp: Fixed bug when using the EDD in a
